Incorrect position of layers for fixed position elements when page is scaled smaller than viewport https://bugs.webkit.org/show_bug.cgi?id=104294

Reviewed by James Robinson.

Source/WebCore:

Fixed issue in scrollOffsetForFixedPosition when contentRect is smaller than visibleContentRect.
This happens when a page originally bigger than viewport is scaled down to smaller than the viewport.

Test: compositing/geometry/fixed-position-composited-page-scale-smaller-than-viewport.html

* page/scrolling/ScrollingCoordinator.cpp:
(WebCore::fixedPositionScrollOffset): Moved common code in scrollOffsetForFixedPosition here. Fixed issue when contentsSize < visibleContentSize.
(WebCore::scrollOffsetForFixedPosition):

LayoutTests:

Test the case that a page containing a composited fixed position element originally bigger than the viewport
is scaled down to be smaller than the viewport.

* compositing/geometry/fixed-position-composited-page-scale-smaller-than-viewport.html: Added.
* compositing/geometry/fixed-position-composited-page-scale-smaller-than-viewport-expected.html: Added.


Canonical link: https://commits.webkit.org/122923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137368 268f45cc-cd09-0410-ab3c-d52691b4dbfc